# rl-arcade

./: .gitignore  ARCHITECTURE.md  Dockerfile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: BENCHMARKS.md  DFD.md  PLAN.md  PRD.md  RESEARCH.md  RFC.md  RLHF.md  THINK.md  USECASES.md
scripts/: sanity_sb3.py
src/rl_arcade/: __init__.py  __main__.py  config.py
src/rl_arcade/agents/: __init__.py  dqn.py  ppo.py  sac.py
src/rl_arcade/envs/: __init__.py
src/rl_arcade/training/: __init__.py  manifest.py
tests/: test_smoke.py
web-demo/: .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
web-demo/public/models/: README.md
web-demo/src/app/: globals.css  layout.tsx  page.tsx
web-demo/src/app/cartpole/: page.tsx
web-demo/src/app/lunar/: page.tsx
web-demo/src/components/: cartpole-canvas.tsx
web-demo/src/lib/: cartpole-env.ts  policy.ts
